# quant-challenge-deliverable

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
